# Lucid

./: .gitignore  README.md  pyproject.toml  requirements.txt
UnrealPlugin/Lucid/: Lucid.uplugin
lucid/: __init__.py  __main__.py  cli.py  color.py  config.py  const.py  constants.py  debug.py  details.py  environ.py  event_broker.py  exceptions.py  inventory.py  io_utils.py  launch.py  legex.py  metadata.py  pipeline_settings.py  proj_creator.py  proj_manager.py  rename.py  schema.py  styleguide.md  work.py
lucid/config/: developer.json  network.json  program_paths.json  proj_settings.json  tools_directory.json
lucid/core/: __init__.py  _auth.py  animation.py  asset.py  auth.py  broker.py  comp.py  config.py  const.py  database.py  details.py  environment.py  event_broker.py  exceptions.py  gui_paths.py  install.py  io_utils.py  layout.py  logger.py  logging.py  model.py  plugins.py  project.py  project_init.py  project_paths.py  qt.py  regex_utils.py  rigging.py  shader.py  texture.py  work.py
lucid/launcher/: Lucid Launcher.lnk  application_settings.py  launch.py  launcher.py  lucid_launcher.bat  lucid_launcher.py  user_settings.py
lucid/maya/: __init__.py  anim_browser.py  anim_publisher.py  asset_browser.py  asset_messages.py  asset_publisher.py  common_actions.py  confirm_window.py  developer.py  environ_menu.py  file_io.py  io.py  overrides.py  shelves.py
lucid/messaging/: channel.py  consumer.py  message.py  router.py  transformer.py
lucid/pipeline/: animation.py  base.py  comp.py  layout.py  model.py  rigging.py  shader.py  texture.py
(+107 files in other folders)
