[build-system]
requires = ["setuptools>=67.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lucid"
description = "Lucid Unreal Games Pipeline"
dynamic = ["version"]
readme = 'README.md'
requires-python = ">=3.9"
dependencies = [
    "pymel==1.4",
    "PySide2==5.15.2",
    "shiboken2==5.15.2",
    "sqlalchemy==2.0.42"
]

[tool.setuptools.dynamic]
version = {attr = "mythos.__version__"}

[tools.setuptools.packages.find]
where = ["resources"]

[tools.setuptools.packages-data]
"*" = ["*.png"]
